--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,14 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: http://username.github.io/
+url: http://lissetdumet.github.io/
 baseurl: /sustain/
-title: Chris Turner
+title: Lisset Dumet
 author: Chris Turner
 description: Personal blog and resume
 avatar: profile.png
 email: yourname@email.com
-github: biomadeira/sustain # username
+github: lissetdumet/sustain # username
 twitter: username
 linkedin: username
 stackoverflow: username   #e.g: users/2735833/proton1h1
