--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ safe: true
 url: http://lissetdumet.github.io/
 baseurl: /sustain/
 title: Lisset Dumet
-author: Chris Turner
+author: Lisset Dumet
 description: Personal blog and resume
 avatar: profile.png
 email: yourname@email.com
